content/aria-services/aria-proxy/aria-proxy-service/docker-content/envoy-config-managed.yaml
node:
  id: envoy-proxy
  cluster: envoy-proxy-cluster
  
dynamic_resources:  
  cds_config:
    api_config_source:
      api_type: GRPC
      grpc_services:
      - envoy_grpc:
          cluster_name: xds_cluster
  lds_config:
    api_config_source:
      api_type: GRPC
      grpc_services:
      - envoy_grpc:
          cluster_name: xds_cluster

static_resources:
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 80
    filter_chains:
    - filters:
      - name: envoy.http_connection_manager
        config:
          codec_type: auto
          stat_prefix: ingress_http
          route_config:
            virtual_hosts:
            - name: backend
              domains: [ "*" ]
              routes:
              - match:
                  prefix: "/"
                redirect:
                  path_redirect: "/"
                  https_redirect: true
          http_filters:
          - name: envoy.router
            config: {}  
  clusters:
  - name: xds_cluster
    connect_timeout: { seconds: 5 }
    type: logical_dns
    lb_policy: ROUND_ROBIN
    http2_protocol_options: {}
    hosts:
    - socket_address:
        address: 127.0.0.1
        port_value: 18000
  - name: accesslog_cluster
    connect_timeout: { seconds: 5 }
    type: logical_dns
    lb_policy: ROUND_ROBIN
    http2_protocol_options: {}    
    hosts:
    - socket_address:
        address: 127.0.0.1
        port_value: 18090

admin:
  access_log_path: "/dev/stdout"
  address:
    socket_address: { address: 0.0.0.0, port_value: 8001 }
